more loesungsansaetze, bewertung und auswahl

--- a/Dokumentation/Dokumentation/00_Dokumentation.tex
+++ b/Dokumentation/Dokumentation/00_Dokumentation.tex
@@ -1,15 +1,15 @@
 %Dokumentklasse
 \documentclass[a4paper,12pt,oneside,pointlessnumbers]{scrbook}
-\usepackage[left= 2.5cm,right = 2cm, bottom = 4 cm]{geometry}
+\usepackage[left= 2.5cm,right = 2cm, top = 3 cm, bottom = 3 cm]{geometry}
 %\usepackage[onehalfspacing]{setspace}
 % ============= Packages =============
 
 % Dokumentinformationen
 \usepackage[
 	pdftitle={Dokumentation},
-	pdfsubject={},
+	pdfsubject={Umsetzung eines Honeypots},
 	pdfauthor={Michael Stroh, Daniel Schwenk},
-	pdfkeywords={},	
+	pdfkeywords={systemadministration,honeypot,security,weingarten},	
 	%Links nicht einrahmen
 	hidelinks
 ]{hyperref}
