--- a/Dokumentation/Dokumentation/Literatur.bib
+++ b/Dokumentation/Dokumentation/Literatur.bib
@@ -52,4 +52,12 @@
   url       = {http://arxiv.org/abs/1608.06249},
 }
 
+@Misc{w3techs16,
+  author       = {w3techs.com},
+  title        = {Usage statistics and market share of Unix for websites},
+  howpublished = {\url{https://w3techs.com/technologies/details/os-unix/all/all}},
+  year         = {2016},
+  note         = {abgerufen: 18.11.2016},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
