Added Link to snare to market-analysis

--- a/Dokumentation/Dokumentation/Literatur.bib
+++ b/Dokumentation/Dokumentation/Literatur.bib
@@ -32,6 +32,14 @@
   note         = {abgerufen: 10.11.2016},
 }
 
+@Misc{Snare16,
+  author       = {SNARE},
+  title        = {Super Next generation Advanced Reactive honEypot},
+  howpublished = {\url{https://github.com/mushorg/snare}},
+  year         = {2016},
+  note         = {abgerufen: 10.11.2016},
+}
+
 @Misc{WikiHoney16,
   author       = {Wikipedia},
   title        = {Honeypot},
