Extended chapter 6_auswahl again

--- a/Dokumentation/Dokumentation/06_auswahl.tex
+++ b/Dokumentation/Dokumentation/06_auswahl.tex
@@ -32,5 +32,5 @@ Die Linux-Distribution HoneyDrive bringt bereits eine größere Zahl an Honeypot
 
 Honeyd dient mehr der Bereitstellung virtueller Hosts in einem Netzwerk zur Verschleierung der realen Infrastruktur und entspricht somit nicht der Anforderung der Bereitstellung eines SSH- oder Webdienstes. Als SSH-Honeypot fällt somit die Wahl auf Kippo.
 
-Aufgrund der umfangreichen Funktionen des Webhoneypots Glastopf, insbesondere im Hinblick auf die gezielte Bekanntmachung eigener Schwachstellen bei gängigen Suchmaschinen, was dem Projektteam eine größere, potentiell auszuwertende Datenmenge in Aussicht stellte, fiel die Wahl zunächst auf diesen Honeypot. Wegen anhaltender Schwierigkeiten bei dem Versuch der Inbetriebnahme durch das Projektteam am 29. November 2016, hat sich das Projektteam bedingt durch einen zu diesem Zeitpunkt bekannten, aber von offizieller Seite noch nicht behobenen Fehler\footnote{ \textit{Make-Error, gemeldet am 23. September 2016 von Nutzer ioanamat}: \url{https://github.com/mushorg/glastopf/issues/266}} beim Ausführen eines Makefiles aus Zeitgründen dazu entschieden, Glastopf nicht zu verwenden. Stattdessen wird nun SNARE verwendet. Der Webhoneypot SNARE bietet die Möglichkeit bereits bestehende Internetauftritte zu klonen, wodurch sich viele Website einfach nachahmen lassen. Hierbei muss jedoch berücksichtigt werden, dass speziell komplexere Webservices den Einsatz bestimmter Infrastruktur wie Datenbanken voraussetzen, wodurch die Möglichkeiten des Klonens eingeschränkt sind.
+Aufgrund der umfangreichen Funktionen des Webhoneypots Glastopf, insbesondere im Hinblick auf die gezielte Bekanntmachung eigener Schwachstellen bei gängigen Suchmaschinen, was dem Projektteam eine größere, potentiell auszuwertende Datenmenge in Aussicht stellte, fiel die Wahl zunächst auf diesen Honeypot. Wegen anhaltender Schwierigkeiten bei dem Versuch der Inbetriebnahme durch das Projektteam am 29. November 2016, hat sich das Projektteam bedingt durch einen zu diesem Zeitpunkt bekannten, aber von offizieller Seite noch nicht behobenen Fehler\footnote{ \textit{Make-Error, gemeldet am 23. September 2016 von Nutzer ioanamat}: \url{https://github.com/mushorg/glastopf/issues/266}} beim Ausführen eines Makefiles aus Zeitgründen dazu entschieden, Glastopf nicht zu verwenden. Stattdessen wird nun SNARE verwendet. Der Webhoneypot SNARE bietet die Möglichkeit bereits bestehende Internetauftritte zu klonen, wodurch sich viele Website einfach nachahmen lassen. Hierbei muss jedoch berücksichtigt werden, dass speziell komplexere Webservices den Einsatz bestimmter Infrastruktur wie Datenbanken voraussetzen, wodurch die Möglichkeiten des Klonens eingeschränkt sind. Das Projektteam entscheidet sich aus Zeitgründen daher zunächst eine bestehende Webseite zu verwenden und gegebenenfalls zu einem späteren Zeitpunkt durch eine selbstgeschriebene Webseite zu ersetzen.
 
