--- a/Dokumentation/Dokumentation/08_evaluation.tex
+++ b/Dokumentation/Dokumentation/08_evaluation.tex
@@ -4,9 +4,11 @@
 \section{Umsetzung der Anforderungen}
 \label{sec:Umsetzung der Anforderungen}
 
-Die unter \ref{sec:Muss-Kriterien} aufgeführten Muss-Kriterien wurden vollständig erfüllt. In diesem Projekt wurde ein Honeypotsystem auf einem von providerdienste.de bereitgestellten vServer umgesetzt. Dieser vServer ist über eine öffentliche IPv4-Adresse im Internet erreichbar und implementiert ein SSH- und Webhoneypot. Durch die von providerdienste.de bereitgestellte Konsole ist es möglich, das System selbst dann, wenn keine Verbindung via SSH möglich ist oder der Server kompromittiert oder gar übernommen wurde, zu konfigurieren und darauf zuzugreifen. Durch die Aktualisierung aller Pakete und der Limitierung der SSH-Authentifzierung auf ein Public-Key-Verfahren wurde das Honeypotsystem bestmöglich abgesichert. Jeglicher Datenverkehr wird geloggt.\\
+Die unter \ref{sec:Muss-Kriterien} aufgeführten Muss-Kriterien wurden vollständig erfüllt. In diesem Projekt wurde ein Honeypotsystem auf einem von providerdienste.de bereitgestellten vServer umgesetzt. Dieser vServer ist über eine öffentliche IPv4-Adresse im Internet erreichbar und implementiert einen SSH- und Webhoneypot. Durch die von providerdienste.de bereitgestellte Konsole ist es möglich, das System selbst dann, wenn keine Verbindung via SSH möglich ist oder der Server kompromittiert oder gar übernommen wurde, zu konfigurieren und darauf zuzugreifen. Es ist dem Projektteam somit jederzeit möglich, das Honeypotsystem abzuschalten, sofern die Situation es erfordern sollte. Durch die Aktualisierung aller Pakete und der Limitierung der SSH-Authentifzierung auf ein Public-Key-Verfahren wurde das Honeypotsystem bestmöglich abgesichert. Jeglicher Datenverkehr wird geloggt. Einem Angreifer ist es somit ohne den Besitz eines der Private-Keys der Projektmitglieder, Kenntnisse über aktuelle Schwachstellen bei den eingesetzten Systemen oder Infiltration des Rechenzentrums von providerdienste.de, nicht ohne Weiteres möglich sich Zugriff zu dem eingesetzten vServer zu verschaffen. Die Möglichkeit zur Manipulation von protokollierten Daten ist somit, gemessen an den zeitlichen Ressourcen des Projektteams, kleinstmöglich gehalten.\\
 
 Das Soll-Kriterium der automatischen Benachrichtigung bei einem Angriff auf das Honeypotsystem stellte sich im Nachhinein als nicht sonderlich hilfreich dar. Speziell auf Port 22 und somit auf den SSH-Honeypot wurden täglich viele Verbindungen aufgebaut. Die Benachrichtigung darüber war für die Projektmitglieder aber wenig hilfreich, da jegliche Kommunikation und Angriffsversuche geloggt und automatisiert ausgewertet wurden. Zudem werden die auswerteten Daten und Konfigurationen automatisch über eine verschlüsselte Verbindung auf dem Cloud-Speicher Google Drive abgelegt. Die Benachrichtigung bietet so nur einen geringen Mehrwert. Bei der Archivierung der auswerteten Daten sowie dem Backup von Konfigurationsdateien ist anzumerken, dass hier ein separater Server oder ein anderes Backupmedium möglicherweise besser geeignet wäre, da es mit den Richtlinien von Google zu einem Datenschutzkonflikt kommen kann.\\
+
+Der Soll-Anforderung einer automatisierten Auswertung von Logdaten wurde durch den Einsatz selbstgeschriebener Bash-Skripte, sowie der fertigen Lösung Pipal zur statistischen Analyse von Passwörtern entsprochen. Ebenso der automatisiert stattfindenden externen Sicherung sowohl von Log-Files selbst als auch den Log-Files zugehörige, bereits ausgewertete Daten wurde entsprochen, indem diese unter Verwendung eines Bash-Skripts auf Google-Drive hochgeladen. 
 
 Die Kann-Kriterien unter \ref{sec:Kann-Kriterien} wurden nur teilweise erfolgreich umgesetzt. So war es dem Projektteam aus technischen Gründen nicht möglich, neben dem Honeypotsystem weitere Systeme wie einen Router, eine Firewall oder PCs in die Infrastruktur zu integrieren. Auch die Umsetzung eines Honeypots, der ein offenes WLAN oder einen Fake-Acces-Point bietet konnte nicht umgesetzt werden. Hier bietet sich Verbesserungspotential, da die durch ein Honeypot gewonnen Informationen speziell in einer größeren Umgebung wertvoll sind. So ist denkbar, aus den gesammelten IP-Adressen Firwallregeln zu erstellen, die auf einer der Infrastruktur vorgelagerten Firewall zur Wirkung kommen.
 Die komplette Umsetzung des Projekts fand auf einem gemieteten vServer statt. Die Kosten liegen hier mit 9,00 Euro je Monat in einem überschaubaren Rahmen. Die Anforderung nach einem geringen Stromverbrauch kann nicht exakt beurteilt werden, da über den Stromverbrauch keine Informationen vorliegen. Auf Grund dessen, dass es sich bei unserem System um ein virtuelles System handelt, welches sich ein physikalisches System mit anderen virtuellen Systemen teilt, kann jedoch von einer gewissen Energieeffizienz ausgegangen werden. Die Anforderung an einen reverse DNS-Lookup wurde wie unter x.y beschrieben umgesetzt und zusätzlich durch eine Darstellung einer Geo-IP-Karte (siehe Anhang x.y) ergänzt
@@ -32,5 +34,6 @@ Da selbst im Bewusstsein dieser Richtlinien dazu tendiert wird, nicht sichere Pa
 
 \section{Schlussfolgerungen Web-Honeypot}
 \label{sec:Schlussfolgerungen Web-Honeypot}
+
 
 Aufgrund der späteren Inbetriebnahme des Web-Honeypots lassen sich zum jetzigen Zeitpunkt noch keine genaueren Rückschlüsse ziehen. Statistiken und Schlussfolgerungen basierend auf einer Auswertung geloggter Zugriffe werden nach ausreichender Laufzeit folgen.
