--- a/Dokumentation/Dokumentation/08_evaluation.tex
+++ b/Dokumentation/Dokumentation/08_evaluation.tex
@@ -37,3 +37,10 @@ Da selbst im Bewusstsein dieser Richtlinien dazu tendiert wird, nicht sichere Pa
 
 
 Aufgrund der späteren Inbetriebnahme des Web-Honeypots lassen sich zum jetzigen Zeitpunkt noch keine genaueren Rückschlüsse ziehen. Statistiken und Schlussfolgerungen basierend auf einer Auswertung geloggter Zugriffe werden nach ausreichender Laufzeit folgen.
+
+Login-Formular nicht mehr relevant, nach Updates SNARE instabil.
+
+Schlussfolgerung aufgrund von Aufmachung(zunächst example-Klon, danach schäbiges Login-Formular) -> Großteil der Angriffe automatisiert
+
+
+Sample one:
