fixed listings leaving the space, preparing evaluation of snare

--- a/Dokumentation/Dokumentation/08_evaluation.tex
+++ b/Dokumentation/Dokumentation/08_evaluation.tex
@@ -40,6 +40,15 @@ Aufgrund der späteren Inbetriebnahme des Web-Honeypots lassen sich zum jetzigen
 
 Login-Formular nicht mehr relevant, nach Updates SNARE instabil.
 
+Alles auf Basis jetztigen Kenntisstandes und darauf basierenden Vermutungen
+
+14 mal favicon.ico in 2 Wochen. Davon auszugehen das echter Nutzer mit Browser aufgerufen hat.
+
+5 mal robots.txt möglicherweise check von Crawlern oder nach disallow suchen könnte interessant sein
+
+4 phpmyadmin (MySQL verwaltung)Aufrufe -> Hätte sich gelohnt etwas entsprechendes zu simulieren
+
+
 Schlussfolgerung aufgrund von Aufmachung(zunächst example-Klon, danach schäbiges Login-Formular) -> Großteil der Angriffe automatisiert
 
 
