Added footnote for example.com

--- a/Dokumentation/Dokumentation/08_evaluation.tex
+++ b/Dokumentation/Dokumentation/08_evaluation.tex
@@ -35,7 +35,7 @@ Da selbst im Bewusstsein dieser Richtlinien dazu tendiert wird, nicht sichere Pa
 \section{Schlussfolgerungen Web-Honeypot}
 \label{sec:Schlussfolgerungen Web-Honeypot}
 
-Innerhalb eines Zeitraumes von einer Woche erfolgten auf dem Web-Honeypot 149 Zugriffe über HTTP und 5 POST-Requests. Angeforderte Pfade und POST-Requests können im Anhang unter \nameref{app:Auswertung snare-path-requests} und \nameref{app:Auswertung snare-post-requests} eingesehen werden. Während dieses Zeitraums bestand der Webauftritt des Web-Honeypots aus einer Kopie der Seite example.com. Ungeachtet der Tatsache, dass damit einem Angreifer lediglich die Möglichkeit gegeben war über verschiedene Pfade einen Zugriff zu potentiell über die Startseite nicht erreichbaren Login Seiten zu erhalten oder über Anwendung von HTTP-Methoden wie POST Schadcode einschleusen zu können und somit die angebotene Angriffsfläche sehr gering ausfiel, konnte das Projektteam mehrere verschiedene Angriffsszenarien aufzeichnen.\\
+Innerhalb eines Zeitraumes von einer Woche erfolgten auf dem Web-Honeypot 149 Zugriffe über HTTP und 5 POST-Requests. Angeforderte Pfade und POST-Requests können im Anhang unter \nameref{app:Auswertung snare-path-requests} und \nameref{app:Auswertung snare-post-requests} eingesehen werden. Während dieses Zeitraums bestand der Webauftritt des Web-Honeypots aus einer Kopie der Seite example.com\footnote{ \textit{example.com}: \url{http://example.com/}}. Ungeachtet der Tatsache, dass damit einem Angreifer lediglich die Möglichkeit gegeben war über verschiedene Pfade einen Zugriff zu potentiell über die Startseite nicht erreichbaren Login Seiten zu erhalten oder über Anwendung von HTTP-Methoden wie POST Schadcode einschleusen zu können und somit die angebotene Angriffsfläche sehr gering ausfiel, konnte das Projektteam mehrere verschiedene Angriffsszenarien aufzeichnen.\\
 
 Die im folgenden Abschnitt getroffenen Aussagen basieren auf Vermutungen, die durch den aktuellen Kenntnisstand des Projektteams begründet und entsprechend zu bewerten sind.\\
 
