--- a/Dokumentation/Dokumentation/08_evaluation.tex
+++ b/Dokumentation/Dokumentation/08_evaluation.tex
@@ -41,7 +41,7 @@ Die im folgenden Abschnitt getroffenen Aussagen basieren auf Vermutungen, die du
 
 61 Aufrufe des Root-Pfades der Webseite lassen darauf schließen, dass der Honeypot tatsächlich von circa 61 unterschiedlichen Systemen aufgerufen wurde. Auch die 14 Anfragen mit dem Ziel die Ressource 'favicon.ico' zu laden, lassen einen Rückschluss zu.  Bei dieser Ressource handelt es sich um ein Miniatur-Bild, ein Logo einer Webseite, das innerhalb eines Browser-Tabs der URI vorangestellt wird und im Wesentlichen der Repräsentation und Wiedererkennung dient. Das Anfordern dieser Ressource ist eine Eigenheit von verbreiteten Browsern, so lässt sich daraus schließen, dass es tatsächlich annähernd 14 manuell durchgeführte Aufrufe des Webhoneypots unter Verwendung eines Browsers gab. Da das Projektteam zu diesem Zeitpunkt bereits im Rahmen der Veröffentlichung dieser Dokumentation die IP-Adresse des Honeypots öffentlich gemacht hat, ist die Möglichkeit nicht auszuschließen, dass diese Zugriffe dieser Veröffentlichung zuzuschreiben sind und sonst möglicherweise nicht stattgefunden hätten.\\ 
 
-Die wenig ansprechende Optik, der Mangel an Inhalten und Angriffsflächen in Form von Eingabefeldern der während dieses Zeitraums aktiven Weboberfläche des Honeypots, lassen darauf schließen, dass der Großteil der aufgezeichneten Zugriffe und Zugriffsversuche automatisiert stattgefunden hat. Dafür sprechen auch 5 Zugriffe auf die Datei 'robots.txt', die insbesondere von gutartigen aber auch bösartigen Bots, so genannten Webcrawlern, die das Internet automatisiert nach Inhalten durchsuchen, ausgewertet wird. So ist es eine gängige Praxis diese Datei nach Einträgen mit vorangestelltem 'disallow' zu durchsuchen, welche Pfade zu Ressourcen angibt, welche von einem solchen Webcrawler auf Wunsch des Administrators nicht betrachtet werden sollen. Gerade diese Vorgabe macht es für Angreifer interessant genau diese, vom Administrator nicht zur Durchsicht erwünschten, Ressourcen aufzurufen und zu analysieren. 5 Zugriffsversuche auf die Webanwendung phpMyAdmin\footnote{ \textit{phpMyAdmin}: \url{https://www.phpmyadmin.net/}} lassen darauf schließen, 
+Die wenig ansprechende Optik, der Mangel an Inhalten und Angriffsflächen in Form von Eingabefeldern der während dieses Zeitraums aktiven Weboberfläche des Honeypots, lassen darauf schließen, dass der Großteil der aufgezeichneten Zugriffe und Zugriffsversuche automatisiert stattgefunden hat. Dafür sprechen auch 5 Zugriffe auf die Datei 'robots.txt', die insbesondere von gutartigen aber auch bösartigen Bots, so genannten Webcrawlern, die das Internet automatisiert nach Inhalten durchsuchen, ausgewertet wird. So ist es eine gängige Praxis diese Datei nach Einträgen mit vorangestelltem 'disallow' zu durchsuchen, welche Pfade zu Ressourcen angibt, welche von einem solchen Webcrawler auf Wunsch des Administrators nicht betrachtet werden sollen. Gerade diese Vorgabe macht es für Angreifer interessant, genau diese, vom Administrator nicht zur Durchsicht erwünschten, Ressourcen aufzurufen und zu analysieren. 5 Zugriffsversuche auf die Webanwendung phpMyAdmin\footnote{ \textit{phpMyAdmin}: \url{https://www.phpmyadmin.net/}} lassen darauf schließen, 
 
 
 Login-Formular nicht mehr relevant, nach Updates SNARE instabil.
